Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-34825

FreeBSD fails to build under clang natively

    XMLWordPrintable

Details

    Description

      There is a large need of backporting to make FreeBSD downstream packing easier.

      Currently ports is this:

      https://github.com/freebsd/freebsd-ports/blob/15d22e1c70da81aaa5751ad0d82f92e9451c4d81/databases/mariadb106-server/Makefile

      Now that we have a https://buildbot.mariadb.org/#/builders/amd64-freebsd-14, lets try to make it build/test correctly.

      FYI spil

      Attachments

        Issue Links

          Activity

            People

              danblack Daniel Black
              danblack Daniel Black
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: